# pm2createPattern1

./: CMakeLists.txt  main.cpp
headers/: Army.h  Game.h  Heros.h  SetupFactory.h  Warrior.h
sources/: Game.cpp  Heros.cpp  SetupFactory.cpp  Warrior.cpp
